Fix overflowing search result names (try searching "cairog").

--- a/styles/theme-base.css
+++ b/styles/theme-base.css
@@ -2745,6 +2745,8 @@ fieldset {
     color: white;
     margin: 0;
     line-height: 1.3;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 /* Class and other matches descriptions tend to be useless. */
